--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,39 +1,36 @@
 # Dependencies
 node_modules/
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+package-lock.json
+yarn.lock
 
-# Environment variables
+# Environment
 .env
 .env.local
 .env.*.local
 
-# Build outputs
-dist/
-build/
+# Database
+*.sqlite
+*.db
+database/
+
+# Logs
+logs/
 *.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
+.DS_Store
+Thumbs.db
 
 # IDE
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
 
-# OS
-.DS_Store
-Thumbs.db
-
-# Runtime
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage
-coverage/
-.nyc_output/
-
-# Testing
-.coverage/
+# Build
+dist/
+build/
 
