--- a/backend/package.json
+++ b/backend/package.json
@@ -1,9 +1,8 @@
 {
   "name": "sway-backend",
   "version": "1.0.0",
-  "description": "Backend API para plataforma SWAY - Atendimento com IA",
+  "description": "Backend API para SWAY - Sistema de atendimento com IA",
   "main": "src/server.js",
-  "type": "module",
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
@@ -11,26 +10,21 @@
   },
   "keywords": [
     "sway",
-    "api",
     "backend",
+    "api",
     "nodejs"
   ],
   "author": "SWAY Brasil",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "dotenv": "^16.3.1",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "express-rate-limit": "^7.1.5"
+    "cors": "^2.8.5",
+    "express-validator": "^7.0.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2"
-  },
-  "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "nodemon": "^3.0.1"
   }
 }
-
