feat: implementa PostgreSQL com Prisma ORM
- Configura Prisma com PostgreSQL
- Cria schema do banco (users, conversations, activities, notifications)
- Atualiza database.js para usar Prisma
- Atualiza controllers para operações assíncronas
- Adiciona seed script para dados iniciais
- Adiciona comandos npm para migrations
- Cria documentação completa (SETUP_DATABASE.md)
- Remove array em memória (dados agora persistem)
- Adiciona atividades e notificações ao criar usuário/login

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -12,6 +12,8 @@ yarn.lock
 *.sqlite
 *.db
 database/
+# Prisma
+prisma/migrations/
 
 # Logs
 logs/
@@ -34,3 +36,5 @@ Thumbs.db
 dist/
 build/
 
+
+/src/generated/prisma
