--- a/backend/env.example
+++ b/backend/env.example
@@ -6,8 +6,11 @@ NODE_ENV=development
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRES_IN=7d
 
-# Database (SQLite para desenvolvimento, pode migrar para PostgreSQL/MySQL)
-DATABASE_URL=sqlite:./database.sqlite
+# Database PostgreSQL
+# Formato: postgresql://USER:PASSWORD@HOST:PORT/DATABASE
+# Exemplo local: postgresql://postgres:postgres@localhost:5432/sway_db
+# Exemplo produção: postgresql://user:password@host:5432/sway_prod
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/sway_db
 
 # CORS
 CORS_ORIGIN=http://localhost:8000,https://swaybrasil.com
