fix: corrige Dockerfile.dev e docker-compose.dev.yml
- Remove tentativa de copiar package.json do frontend (não existe)
- Corrige ordem de cópia dos arquivos
- Define working_dir explicitamente no docker-compose
- Garante que Prisma Client seja gerado antes de rodar

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -26,6 +26,7 @@ services:
     restart: unless-stopped
     networks:
       - sway-network
+    working_dir: /app/backend
     command: npm run dev
 
   db:
