--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,19 +6,22 @@ WORKDIR /app
 # Instalar dependências globais
 RUN npm install -g nodemon prisma
 
-# Copiar package files
+# Copiar package files do backend
 COPY backend/package*.json ./backend/
-COPY frontend/package*.json ./frontend/ 2>/dev/null || true
 
 # Instalar dependências do backend
 WORKDIR /app/backend
 RUN npm install
 
-# Copiar código
-COPY backend/ ./
-COPY frontend/ ../frontend/
+# Copiar código do backend
+WORKDIR /app
+COPY backend/ ./backend/
+
+# Copiar frontend
+COPY frontend/ ./frontend/
 
 # Gerar Prisma Client
+WORKDIR /app/backend
 RUN npx prisma generate
 
 # Expor porta
@@ -29,5 +32,7 @@ ENV NODE_ENV=development
 ENV PORT=3000
 
 # Comando para desenvolvimento (com nodemon)
+# O WORKDIR precisa estar em /app/backend para executar npm run dev
+WORKDIR /app/backend
 CMD ["npm", "run", "dev"]
 
